--- a/poster_cv/poster_main.tex
+++ b/poster_cv/poster_main.tex
@@ -1,292 +1,173 @@
 
-\documentclass[final,hyperref={pdfpagelabels=false}]{beamer}
+\documentclass[a0,portrait]{a0poster}
 
-\usepackage[orientation=portrait,size=a0,scale=1.4]{beamerposter} % Use the beamerposter package for laying out the poster with a portrait orientation and an a0 paper size
+\usepackage{multicol} % This is so we can have multiple columns of text side-by-side
+\columnsep=100pt % This is the amount of white space between the columns in the poster
+\columnseprule=3pt % This is the thickness of the black line between the columns in the poster
 
-% \usetheme{I6pd2} % Use the I6pd2 theme supplied with this template
+\usepackage[svgnames]{xcolor} % Specify colors by their 'svgnames', for a full list of all colors available see here: http://www.latextemplates.com/svgnames-colors
 
-\usepackage[english]{babel} % English language/hyphenation
+% \usepackage{times} % Use the times font
+\usepackage{palatino} % Uncomment to use the Palatino font
 
-\usepackage{amsmath,amsthm,amssymb,latexsym} % For including math equations, theorems, symbols, etc
-
-%\usepackage{times}\usefonttheme{professionalfonts}  % Uncomment to use Times as the main font
-%\usefonttheme[onlymath]{serif} % Uncomment to use a Serif font within math environments
-
-\boldmath % Use bold for everything within the math environment
-
-\usepackage{booktabs} % Top and bottom rules for tables
-
+\usepackage{graphicx} % Required for including images
 \graphicspath{{figures/}} % Location of the graphics files
-
-\usecaptiontemplate{\small\structure{\insertcaptionname~\insertcaptionnumber: }\insertcaption} % A fix for figure numbering
-
-
-
-\newcommand{\leftfoot}{http://www.LaTeXTemplates.com} % Left footer text
-
-\newcommand{\rightfoot}{john@smith.com} % Right footer text
-
-%----------------------------------------------------------------------------------------
+\usepackage{booktabs} % Top and bottom rules for table
+\usepackage[font=small,labelfont=bf]{caption} % Required for specifying captions to tables and figures
+\usepackage{amsfonts, amsmath, amsthm, amssymb} % For math fonts, symbols and environments
+\usepackage{wrapfig} % Allows wrapping text around tables and figures
 
 \begin{document}
 
-\addtobeamertemplate{block end}{}{\vspace*{2ex}} % White space under blocks
+%----------------------------------------------------------------------------------------
+% POSTER HEADER
+%----------------------------------------------------------------------------------------
 
-\begin{frame}[t] % The whole poster is enclosed in one beamer frame
+% The header is divided into two boxes:
+% The first is 75% wide and houses the title, subtitle, names, university/organization and contact information
+% The second is 25% wide and houses a logo for your university/organization or a photo of you
+% The widths of these boxes can be easily edited to accommodate your content as you see fit
 
+\begin{minipage}[b]{0.75\linewidth}
+\VeryHuge \color{NavyBlue} \textbf{Text-to-Iamge Synthesis} \color{Black}\\ % Title
+\huge \textbf{Jiin Nam, Raghav Singhal}\\[0.5cm] % Author(s)
+\huge New York University\\[0.4cm] % University/organization
+\end{minipage}
+%
+% \begin{minipage}[b]{0.25\linewidth}
+% \includegraphics[width=7cm]{logo.png}\
+% \includegraphics[width=14cm]{logo-WGC.png}\\
+% \end{minipage}
 
-\begin{columns}[t] % The whole poster consists of two major columns, each of which can be subdivided further with another \begin{columns} block - the [t] argument aligns each column's content to the top
-
-\begin{column}{.02\textwidth}\end{column} % Empty spacer column
-
-\begin{column}{.465\textwidth} % The first column
+\vspace{1cm} % A bit of extra whitespace between the header and poster content
 
 %----------------------------------------------------------------------------------------
-% OBJECTIVES
+
+\begin{multicols}{3} % This is how many columns your poster will be broken into, a portrait poster is generally split into 2 columns
+
 %----------------------------------------------------------------------------------------
-\title{\huge Text-to-Image Synthesis} % Poster title
+% ABSTRACT
+%----------------------------------------------------------------------------------------
 
-\author{John Smith, James Smith and Jane Smith} % Author(s)
+\color{Navy} % Navy color for the abstract
 
-\institute{Department and University Name} % Institution(s)
-
-
-\begin{block}{Objectives}
-
-\begin{enumerate}
-\item Donec fringilla, velit id lobortis commodo, eros dui consectetur mi, ut interdum lorem dui sed mauris.
-\item Nulla ac nulla rhoncus est bibendum ullamcorper:
-\item Quisque vestibulum, nisl sit amet gravida ultricies dis parturient montes, nascetur ridiculus musobortis commodo, eros dui consectetur mi.
-\end{enumerate}
-
-\end{block}
-
+\begin{abstract}
+The electrical energy from renewables in Algeria contributed about 3.4\% (280 MW) in 2008 of a total power of 8.1 GWe and will reach 5\% by the year 2017 according to the Algerian Electricity and Gas Regulation Commission (CREG). The country’s target is reaching 40\% by 2030. The geothermal resources in Algeria are of low-enthalpy type. Most of these geothermal resources are located in the north of the country and generate a heat discharge of 240 MWt.
+\end{abstract}
 %----------------------------------------------------------------------------------------
 % INTRODUCTION
 %----------------------------------------------------------------------------------------
 
-\begin{block}{Introduction}
-
+\color{Black} % SaddleBrown color for the introduction
+\section*{Introduction}
+Algeria is situated in northern Africa, bordering the Mediterranean Sea, between Morocco and Tunisia. Algeria has the 9th-largest reserves of natural gas in the world. It ranks 16th in proved oil reserves. Currently, more than 98 \% of Algeria's electricity generation comes from fossil-fuel resources.
 \begin{itemize}
-\item Donec fringilla, velit id lobortis commodo, eros dui consectetur mi, ut interdum lorem dui sed mauris. Duis id sem nunc, a pharetra odio. Phasellus posuere \alert{semper massa}, id bibendum ligula tristique at. Integer sit amet vulputate turpis. Sed erat lacus, faucibus at viverra et, mattis nec sem. Cras faucibus \alert{scelerisque} cursus. Opet volutpat ligula. Duis semper lorem eget dui dignissim porttitor. Nulla facilisi. In ullamcorper lorem quis dolor iaculis nec egestas enim ultricies. Cras ut mauris elit, ut lacinia dui. Proin in ante et libero hendrerit iaculis. Nulla eu erat a urna laoreet auctor id a turpis. Nam mollis tristique neque eu luctus. Suspendisse rutrum congue nisi sed convallis. Aenean id neque dolor.
+\item Geothermal exploration program started in 1967 by National Oil Comapny SONATRACH.
+\item From 1983 onwards the geothermal research has been continued by the Renewable Energies Center of Algeria (CDER).
 \end{itemize}
-
-\end{block}
-
 %----------------------------------------------------------------------------------------
-% MATERIALS
-%----------------------------------------------------------------------------------------
-
-\begin{block}{Materials}
-
-\begin{columns} % Subdivide the first main column
-\begin{column}{.54\textwidth} % The first subdivided column within the first main column
-\begin{itemize}
-\item Vestibulum nisl, quis euismod velit eros in ligula.
-\begin{itemize}
-\item Cras rhoncus quam et augue convallis in elementum urna tincidunt.
-\end{itemize}
-\item Proin ut vestibulum augue.
-\begin{itemize}
-\item Donec dapibus sagittis neque eu ultrices.
-\end{itemize}
-\end{itemize}
-\end{column}
-
-\begin{column}{.43\textwidth} % The second subdivided column within the first main column
-\centering
-\begin{figure}
-% \includegraphics[width`'=0.8\linewidth]{placeholder.jpg}
-\caption{Figure caption}
-\end{figure}
-\end{column}
-\end{columns} % End of the subdivision
-
-\begin{itemize}
-\item Curabitur sapien ligula, faucibus in feugiat quis, vestibulum a turpis.
-\begin{itemize}
-\item Phasellus quis nunc neque. Suspendisse mauris diam, suscipit non gravida in, placerat id enim. Ut nec ipsum in lectus ultrices sagittis.
-\item Ut nec ipsum in lectus ultrices sagittis.
-\item Phasellus quis nunc neque.
-\end{itemize}
-\end{itemize}
-
-\end{block}
-
-%----------------------------------------------------------------------------------------
-% METHODS
+% GEOLOGY
 %----------------------------------------------------------------------------------------
 
-\begin{block}{Methods}
+\color{Black} % DarkSlateGray color for the rest of the content
 
-\begin{itemize}
-\item Maecenas Vel Nisl Elit
-\begin{itemize}
-\item Suspendisse potenti. Fusce a est eget turpis rhoncus varius sed sed dui. Cras justo nibh, bibendum a cursus eget, consequat et dui. Maecenas vel nisl elit, sed dignissim dolor.
-\item In hac habitasse platea dictumst.
-\end{itemize}
-
-\item Viewpoint Matching Constraints
-\begin{itemize}
-\item Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-\item Proin in nisi diam.
-\item Nam ultricies pellentesque nunc, ultrices volutpat nisl ultrices a.
-\end{itemize}
-
-\item Volutpat
-\begin{itemize}
-\item Duis semper lorem eget dui dignissim porttitor.
-\item Nulla facilisi. In ullamcorper lorem quis dolor.
-\end{itemize}
-\end{itemize}
-
-\end{block}
-
+\section*{Geology}
+The geology of Algeria (Figure 1) is divided into two main structural units: the folded Tellian Domain in the North, and the Saharian Platform in the South, separated by the South Atlasic Flexure (Fabre, 1976).
+\begin{center}\vspace{1cm}
+% \includegraphics[width=0.8\linewidth]{Figure_1}
+\captionof{figure}{\color{Green} Major geotectonics units of West Africa modified from Fabre (1976). 1: Tertiary and Quaternary; 2: Alpine molasses; 3: Tertiary thrust sheet; 4: Secondary tabular; 5: Secondary plicative; 6: Primary plicative; 7: Primary tabular; 8: Precambrian and Precorce Cambrian of Sahara; 9: Cenozoic magma; 10: Megafault.}
+\end{center}%\vspace{1cm}
 %----------------------------------------------------------------------------------------
-% MATHEMATICAL SECTION
+% GEOTHERMAL DATA
 %----------------------------------------------------------------------------------------
-
-\begin{block}{Mathematical Section}
-
+\section*{Geothermal Data}
+\subsection*{Heat Flow}
 \begin{itemize}
-\item Maecenas Ultricies Feugiat Velit Non Mattis.
-\begin{itemize}
-\item Duis ante erat, bibendum nec tempus nec, interdum quis est. Nulla at mollis tortor. Phasellus quis leo dolor, aliquam laoreet orci $X$ Donec dapibus sagittis neque eu nec, interdum quis est. $Y_n, n=1,\cdots,N$ ndum nec tempus nec, interd
-\begin{align*}
-X \rightarrow r(X) & = \arg \max_{c} \Big\{ \max_n \big\{ \sum_{x_i \in X} \delta(x_i,Y_{n,c})\big\} \Big\}
-\end{align*}
-\item Cras faucibus scelerisque cursus. Proin ut vestibulum augue. $\delta(x_i,Y_{n,c})$
+\item Average heat flow values are 82$\pm19$ mW/m$^2$
+\item Very high heat flow values (90-130 mW/m$^2$) in South Algeria (Hoggar Precambrian basement).
 \end{itemize}
-\item Fusce tempus arcu id ligula varius dictum. Donec ut nisl dui, ac consectetur elit. In nec enim porta augue venenatis sollicitudin. Phasellus quis nunc neque. Suspendisse mauris diam, suscipit non gravida in, placerat id enim. Ut nec ipsum in lectus ultrices sagittis.
-\end{itemize}
-
-\end{block}
-
-%----------------------------------------------------------------------------------------
-
-\end{column} % End of the first column
-
-\begin{column}{.03\textwidth}\end{column} % Empty spacer column
-
-\begin{column}{.465\textwidth} % The second column
-
-%----------------------------------------------------------------------------------------
-% RESULTS
-%----------------------------------------------------------------------------------------
-
-\begin{block}{Results: Table}
-
-\begin{itemize}
-\item Ased Aliquet Luctus Lectus
-\end{itemize}
-
-\begin{table}
-\begin{tabular}{l l l}
-\toprule
-\textbf{Treatments} & \textbf{Response 1} & \textbf{Response 2}\\
-\midrule
-Treatment 1 & 0.0003262 & 0.562 \\
-Treatment 2 & 0.0015681 & 0.910 \\
-Treatment 3 & 0.0009271 & 0.296 \\
-\bottomrule
-\end{tabular}
-\caption{Table caption}
-\end{table}
-
-\begin{itemize}
-\item Sollicitudin Vel Orci
-\item Maecenas Ultricies Feugiat Velit Non Mattis.
-\end{itemize}
-
-\begin{table}
-\begin{tabular}{l l l}
-\toprule
-\textbf{Treatments} & \textbf{Response 1} & \textbf{Response 2}\\
-\midrule
-Treatment 1 & 0.0003262 & 0.562 \\
-Treatment 2 & 0.0015681 & 0.910 \\
-Treatment 3 & 0.0009271 & 0.296 \\
-\bottomrule
-\end{tabular}
-\caption{Table caption}
-\end{table}
-
-\end{block}
+\begin{center}\vspace{1cm}
+% \includegraphics[width=1.0\linewidth]{Fig2}
+\captionof{figure}{\color{Green} (A) Temp. vs. depth for different regions (Takherist and Lesquer, 1989). (B) Heat flow map of Algeria (Takherist and Lesquer, 1989). Unit: mW/m$^2$. 230 oil wells are presented, with depths ranging from 500 to 5500 m.}
+\end{center}\vspace{1cm}
 
 %------------------------------------------------
 
-\begin{block}{Results: Figure}
+\subsection*{Geothermal Reservoirs}
+\begin{enumerate}
+\item The Tlemcenian dolomites in the NW-Algeria: thermal waters are related to the Plio-Quaternary volcanic rocks; bicarbonate water type.
+\item Carbonate formations in the NE-Algeria: area is 15,000 km$^2$; high flow rates (\textgreater100 L/s); highest temperature in Algeria (98 $^{\circ}$C).
+\item Albian sandstone reservoir in the South of Algeria: area is 600,000 km$^2$; depth of aquifer is 2.6 km; highly mineralized waters.
+\end{enumerate}
+\begin{center}\vspace{1cm}
+% \includegraphics[width=0.8\linewidth]{Figure_4}
+\captionof{figure}{\color{Green} Main Algerian geothermal areas (Fekraoui and Abouriche, 1995)}
+\end{center}\vspace{1cm}
 
-\begin{figure}
-% \includegraphics[width=0.8\linewidth]{placeholder.jpg}
-\caption{Figure caption}
-\end{figure}
+\subsection*{Hot Springs}
+\begin{center}\vspace{1cm}
+% \includegraphics[width=0.8\linewidth]{Figure_5}
+\captionof{figure}{\color{Green} Temperatures of the main hot springs of the northern part of Algeria (Kedaid, 2002)}
+\end{center}\vspace{1cm}
 
-\end{block}
+\begin{center}\vspace{1cm}
+% \includegraphics[width=0.8\linewidth]{Figure_6}
+\captionof{figure}{\color{Green} Total Dissolved Solid (TDS) of the main hot springs of the northern part of Algeria (Kedaid, 2002)}
+\end{center}\vspace{1cm}
 
-%----------------------------------------------------------------------------------------
-% CONCLUSION
-%----------------------------------------------------------------------------------------
+\begin{center}\vspace{1cm}
+% \includegraphics[width=1.0\linewidth]{Fig6.jpg}
+\captionof{figure}{\color{Green} (A) Mixing model to illustrate the relative contribution of magmatic, meteoric and crustal sources of gases in NE Algerian geothermal discharges. (B) Photo of the concretions of Hammam Meskhoutine (NE Algeria). The height of the concretions on successive conduits reaches 30 m.}
+\end{center}\vspace{1cm}
 
-\begin{block}{Conclusion}
-
+\subsection*{Geothermal Energy and its uses}
 \begin{itemize}
-\item Opet volutpat ligula. Duis semper lorem eget dui dignissim porttitor. Nulla facilisi. In ullamcorper lorem quis dolor iaculis nec egestas enim ultricies. Cras ut mauris elit, ut lacinia dui. Proin in ante et libero hendrerit iaculis.
-\item Nulla eu erat a urna laoreet auctor id a turpis. Nam mollis tristique neque eu luctus. Suspendisse rutrum congue nisi sed convallis.
-\item Aenean id neque dolor.
-\item Opet volutpat ligula. Duis semper lorem eget dui dignissim porttitor. Nulla facilisi. In ullamcorper lorem quis dolor iaculis nec egestas enim ultricies. Cras ut mauris elit, ut lacinia dui. Proin in ante et libero hendrerit iaculis.
+\item Utilizations of the hot water in Algeria are balneology, space and greenhouse heating.
+\item Heat-pump in a primary school (NW Algeria) for heating and cooling purposes.
+\item Tilapia fish farming in south of Algeria (Ghardaia and Ouargla).
+\item Greenhouses for melon and tomato cultivation in South of Algeria (Ouargla and Touggourt).
+\item Future projects: binary-cycle geothermal power plant in Guelma (NE-Algeria); heat-pump in Khenchla (NE Algeria).
 \end{itemize}
+The total energy use for geothermal is about 1,778.65 TJ/yr.
 
-\end{block}
+\begin{center}\vspace{1cm}
+% \includegraphics[width=0.8\linewidth]{Figure_7}
+\captionof{figure}{\color{Green} Location of Algerian geothermal uses sites (Fekraoui and Kedaid, 2005)}
+\end{center}\vspace{1cm}
+
+\subsection*{Geothermal Conceptual Models}
+% \begin{center}\vspace{1cm}
+% \includegraphics[width=1.0\linewidth]{Algerian_geothermal_models.jpg}
+% \captionof{figure}{\color{Green} (a) Idealized northern Algerian geothermal system characterized by heating of the filtered meteoric water. (b) Idealized southern Algerian geothermal system, characterized by basement heating of the sedimentary basin (Saibi, 2009)}
+% \end{center}
 
 %----------------------------------------------------------------------------------------
+% CONCLUSIONS
+%----------------------------------------------------------------------------------------
+
+\color{SaddleBrown} % SaddleBrown color for the conclusions to make them stand out
+
+\section*{Conclusions}
+Despite being a petroleum- and gas-rich country, Algeria is making efforts to exploit its renewable energies. The Algerian government has adopted new renewable energy laws and financial support for the investors to facilitate the exploitation of the renewable energies for electricity production and direct utilizations. Algeria has relatively abundant geothermal resources especially in the northeastern parts but not totally used.
+\color{Black} % Set the color back to DarkSlateGray for the rest of the content
+
+%----------------------------------------------------------------------------------------
+% FORTHCOMING RESEARCH
+%----------------------------------------------------------------------------------------
+
+\section*{Forthcoming Research}
+
+Simulation of thermodynamic properties of the thermal fluid and power output with longevity using geological, hydrogeological, and geothermal data from NE-Algerian geothermal reservoirs.
+
+ %----------------------------------------------------------------------------------------
 % REFERENCES
 %----------------------------------------------------------------------------------------
 
-\begin{block}{References}
-
-\nocite{*} % Insert publications even if they are not cited in the poster
-\small{\bibliographystyle{unsrt}
-\bibliography{sample}}
-
-\end{block}
-
-%----------------------------------------------------------------------------------------
-% ACKNOWLEDGEMENTS
-%----------------------------------------------------------------------------------------
-
-\begin{block}{Acknowledgments}
-
-\begin{itemize}
-\item Nam mollis tristique neque eu luctus. Suspendisse rutrum congue nisi sed convallis. Aenean id neque dolor. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
-\end{itemize}
-
-\end{block}
-
-%----------------------------------------------------------------------------------------
-% CONTACT INFORMATION
-%----------------------------------------------------------------------------------------
-
-\setbeamercolor{block title}{fg=black,bg=orange!70} % Change the block title color
-
-\begin{block}{Contact Information}
-
-\begin{itemize}
-\item Web: \href{http://www.university.edu/smithlab}{http://www.university.edu/smithlab}
-\item Email: \href{mailto:john@smith.com}{john@smith.com}
-\item Phone: +1 (000) 111 1111
-\end{itemize}
-
-\end{block}
+\nocite{*} % Print all references regardless of whether they were cited in the poster or not
+\bibliographystyle{plain} % Plain referencing style
+\bibliography{sample} % Use the example bibliography file sample.bib
 
 %----------------------------------------------------------------------------------------
 
-\end{column} % End of the second column
-
-\begin{column}{.015\textwidth}\end{column} % Empty spacer column
-
-\end{columns} % End of all the columns in the poster
-
-\end{frame} % End of the enclosing frame
-
+\end{multicols}
 \end{document}
