--- a/poster_cv/poster_main.tex
+++ b/poster_cv/poster_main.tex
@@ -7,7 +7,11 @@
 
 \usepackage[svgnames]{xcolor} % Specify colors by their 'svgnames', for a full list of all colors available see here: http://www.latextemplates.com/svgnames-colors
 
-% \usepackage{times} % Use the times font
+% \usepackage{times} %
+
+
+
+ Use the times font
 \usepackage{palatino} % Uncomment to use the Palatino font
 
 \usepackage{graphicx} % Required for including images
